--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "ng2-file-upload": "^1.3.0",
     "ngx-image-zoom": "^0.3.4",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
